// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Break editor Node builds the expected component 1`] = `
<div
  className="non-editable-chunk obojobo-draft--chunks--break viewer width-undefined"
>
  <hr />
</div>
`;

exports[`Break editor Node component toggles size to large 1`] = `"<div class=\\"non-editable-chunk obojobo-draft--chunks--break viewer width-normal\\"><hr><button>Toggle Size</button></div>"`;

exports[`Break editor Node component toggles size to large 2`] = `"<div class=\\"non-editable-chunk obojobo-draft--chunks--break viewer width-large\\"><hr><button>Toggle Size</button></div>"`;

exports[`Break editor oboToSlate converts an OboNode to a Slate node 1`] = `
Object {
  "data": Object {
    "content": Object {
      "width": "large",
    },
  },
  "key": "mockKey",
  "object": "block",
  "type": "mockType",
}
`;

exports[`Break editor plugins.renderNode renders a break when passed 1`] = `
<Node
  attributes={
    Object {
      "dummy": "dummyData",
    }
  }
  dummy="dummyData"
  node={
    Object {
      "data": Object {
        "get": [Function],
      },
      "type": "ObojoboDraft.Chunks.Break",
    }
  }
/>
`;

exports[`Break editor slateToObo converts a Slate node to an OboNode with content 1`] = `
Object {
  "children": Array [],
  "content": Object {
    "width": undefined,
  },
  "id": "mockKey",
  "type": "mockType",
}
`;
